<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/roman_numeral"
        android:textSize="24sp"
        android:text="I"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/station_title"
        android:text="@string/test_title"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_title_adoration"
        android:id="@+id/section_title_adoration"
        android:textSize="@dimen/section_title_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adoration"
        android:id="@+id/adoration"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/station_image"
        android:src="@drawable/third"
        android:layout_gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_title_reading"
        android:id="@+id/section_title_reading"
        android:textSize="@dimen/section_title_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_scripture"
        android:id="@+id/scripture"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reading"
        android:text="@string/test_reading"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_title_meditation"
        android:id="@+id/section_title_meditation"
        android:textSize="@dimen/section_title_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_med_scripture"
        android:id="@+id/meditation_scripture"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meditation_reading"
        android:text="@string/test_med_reading"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_title_prayer"
        android:id="@+id/section_title_prayer"
        android:textSize="@dimen/section_title_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prayer"
        android:text="@string/test_prayer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_title_hymn"
        android:id="@+id/section_title_hymn"
        android:textSize="@dimen/section_title_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hymn"
        android:text="@string/test_prayer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"/>

</LinearLayout>
</ScrollView>
    </LinearLayout>